--- a/mapage.html
+++ b/mapage.html
@@ -8,11 +8,42 @@
 	</head>
 	<body>
 		<div class="container">
+			<div class="search-bar">
+				<input
+					type="text"
+					id="search"
+					placeholder="Search by name..."
+					onchange="searchPerson()"
+				/>
+			</div>
 			<div class="chart-container">
 				<canvas id="myChart"></canvas>
+				<div id="loading">
+					<!--Image-->
+					<img
+						src="https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif"
+						alt="Loading..."
+					/>
+				</div>
 			</div>
 		</div>
 
 		<script src="script.js"></script>
+		<style>
+			.container {
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: center;
+			}
+
+			.chart-container {
+				width: 90%;
+				height: 90%;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+		</style>
 	</body>
 </html>
